--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+
+# Custom
+.idea
+.DS_Store
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -101,7 +107,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-
-# IDE
-.idea/
