--- a/AutoCmdb/requirements.txt
+++ b/AutoCmdb/requirements.txt
@@ -1,3 +1,26 @@
+backcall==0.1.0
+certifi==2018.10.15
+colorama==0.4.1
+decorator==4.3.0
 Django==1.11.10
-PyMySQL==0.8.1
+et-xmlfile==1.0.1
+ipython==7.1.1
+ipython-genutils==0.2.0
+jdcal==1.4
+jedi==0.13.1
+numpy==1.15.4
+openpyxl==2.5.11
+pandas==0.23.4
+parso==0.3.1
+pickleshare==0.7.5
 Pillow==5.2.0
+prompt-toolkit==2.0.7
+Pygments==2.3.0
+PyMySQL==0.8.1
+python-dateutil==2.7.5
+pytz==2018.7
+six==1.11.0
+traitlets==4.3.2
+wcwidth==0.1.7
+wincertstore==0.2
+xlrd==1.1.0
