--- a/AutoCmdb/requirements.txt
+++ b/AutoCmdb/requirements.txt
@@ -1,9 +1,11 @@
 backcall==0.1.0
 certifi==2018.10.15
+chardet==3.0.4
 colorama==0.4.1
 decorator==4.3.0
 Django==1.11.10
 et-xmlfile==1.0.1
+idna==2.7
 ipython==7.1.1
 ipython-genutils==0.2.0
 jdcal==1.4
@@ -19,8 +21,10 @@ Pygments==2.3.0
 PyMySQL==0.8.1
 python-dateutil==2.7.5
 pytz==2018.7
+requests==2.20.1
 six==1.11.0
 traitlets==4.3.2
+urllib3==1.24.1
 wcwidth==0.1.7
 wincertstore==0.2
 xlrd==1.1.0
