--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .idea
 .DS_Store
 AutoCmdb/db.sqlite3
+# local_settings.py
 test_script
 
 
@@ -63,7 +64,7 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
+
 # db.sqlite3
 
 # Flask stuff:
